src/snapshots/tiny_fe__app__tests__renders_correctly.snap
---
source: src/app.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                     Tiny FE                                    "
"|> /home/user                                                                   "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃>.git/                                                                        ┃"
"┃ .gitignore                                                                   ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" (d)irectory │ (f)recent                                                        "
"                                Press ? for help                                "
