src/snapshots/tiny_fe__app__tests__renders_correctly_with_search_input.snap
---
source: src/app.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                     Tiny FE                                    "
"|> /home/user                                                                   "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃>.git/  a                                                                     ┃"
"┃ dir1/  s                                                                     ┃"
"┃ .gitignore                                                                   ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" (d)irectory │ (f)recent                                                        "
" /test                                                                          "
