src/snapshots/tiny_fe__app__tests__renders_correctly_with_search_input_after_key_events.snap
---
source: src/app.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                     Tiny FE                                    "
"|> /home/user                                                                   "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃>.git/                                                                        ┃"
"┃ .gitignore                                                                   ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" (d)irectory │ (f)recent                                                        "
" /test                                                                          "
