src/snapshots/tiny_fe__app__tests__search_renders_correctly.snap
---
source: src/app.rs
expression: terminal.backend()
snapshot_kind: text
---
"                                     Tiny FE                                    "
"|> /home/user                                                                   "
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃>.git/  a                                                                     ┃"
"┃ .gitignore                                                                   ┃"
"┃                                                                              ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
" (d)irectory │ (f)recent                                                        "
" /git                                                                           "
